# cpp_practice_image_processing

./: .gitignore  CMakeLists.txt  README.md
doc/my_notes/: image_manipulation.cpp  iterator_through_image.cpp
include/my_algos/: basics.h  cv_basics.h  filters.h  geometry.h  maths.h
include/my_cv/: cv_basics.h  cv_commons.hpp  filters.h  geometry.h  keypoints.h  maths.h  maths.hpp
include/my_ransac/: abstract_model.hpp  model_2d_line.h  models.h  random_data_sampler.hpp  ransac.h
scripts/: kernels_int_to_float.py
src/: canny.cpp
src/my_algos/: CMakeLists.txt  filters.cpp  geometry.cpp  maths.cpp
src/my_cv/: CMakeLists.txt  filters.cpp  geometry.cpp  keypoints.cpp  maths.cpp
src/my_ransac/: CMakeLists.txt  model_2d_line.cpp  models.cpp  ransac.cpp
tests/: CMakeLists.txt  filters_test.cpp  test_canny.cpp  test_fit_2d_line.cpp  test_harris.cpp  test_hough_line.cpp  test_ransac.cpp  test_ransac_fit_2d_line.cpp  test_sobel_and_gaussion.cpp
tests/others/: test_svd.cpp
